--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
     
   <script>
-    var apikey = process.env.VUE_APP_GOOGLE_API_KEY
+    //add your google api key here
+    var apikey = ""
     document.write( "<script src=\"https://maps.googleapis.com/maps/api/js?key=" + apikey 
                 + "&libraries=places\"><" + "/script>" );
   </script>
